--- a/src/components/MovieRow/styles.css
+++ b/src/components/MovieRow/styles.css
@@ -45,15 +45,16 @@ h2 {
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-.movie_row img {
-  width: 9.375rem;
-  height: 14rem;
+  width: 150px;
   transform: scale(0.9);
-  cursor: pointer;
   transition: all ease 0.2s;
 }
-.movie_row img:hover {
+.movie_row img {
+  height: 14rem;
+  cursor: pointer;
+  margin-bottom: 0.5rem;
+}
+.movie_row-movie:hover {
   transform: scale(1);
 }
 .movie_row-movie_name {
